# lw-python

./: .gitignore  Justfile  LICENSE  README.md  main.py  main.spec  pyproject.toml
.github/actions/clean-nvidia/: action.yml
.github/actions/prepare/: action.yml
.github/workflows/: build.yml  ci.yml  test.yml
lw_python/: main.py  pyproject.toml
lw_python/tests/: test_textractor.py
lw_python/tests/assets/: __init__.py  textract_analyze_result.json  textract_result.json
lw_python/tests/expecteds/: expected_textract_analyze_result.md  expecteds.py  textract_result.md
lw_python/textract/: __init__.py
scripts/: ci_clean_nvidia_artifacts.py  clean.py
src/lwPython/: __init__.py  _utils.py  main.py
src/textract/: main.py
tests/: test_docling.py  test_markitdown.py  test_textractor.py  text_markitdown.py
tests/assets/: __init__.py  assets.py  test_docx_to_md.docx  textract_detect_result.json
tests/expecteds/: __init__.py  expected_docling.md  expected_docx_markitdown.md  expected_pdf_markitdown.md  expected_textract_detect_result.md  expecteds.py
