[project]
name = "lw-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "amazon-textract-textractor>=1.9.2",
    "click>=8.3.0",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--import-mode=importlib"  # Recommended for modern projects to avoid sys.path issues]
]
